--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                             <a href="https://github.com/tianshijing/ScalingOpt" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors duration-200">
                                 <i data-lucide="github" class="w-5 h-5"></i>
                             </a>
-                            <a href="mailto:contact@awesome-optimizers.com" class="text-gray-400 hover:text-white transition-colors duration-200">
+                            <a href="mailto:juanxitian1031@gmail.com" class="text-gray-400 hover:text-white transition-colors duration-200">
                                 <i data-lucide="mail" class="w-5 h-5"></i>
                             </a>
                         </div>
