--- a/community.html
+++ b/community.html
@@ -336,7 +336,7 @@
                                 </a>
                                 
                                 <a
-                                    href="mailto:contact@awesome-optimizers.com"
+                                    href="mailto:juanxitian1031@gmail.com"
                                     class="flex items-center space-x-3 p-3 rounded-lg hover:bg-gray-50 transition-colors duration-200"
                                 >
                                     <i data-lucide="mail" class="w-5 h-5 text-green-600"></i>
