--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         </h1>
                         <p class="text-xl md:text-2xl text-blue-100 mb-12 max-w-4xl mx-auto leading-relaxed">
                             Discover, compare, and contribute to cutting-edge optimization algorithms designed for
-                            <span class="text-cyan-300 font-semibold"> large-scale machine learning</span>. 
+                            <span class="text-cyan-300 font-semibold"> large-scale deep learning</span>. 
                             From foundational methods to state-of-the-art scalable optimizers.
                         </p>
                         <div class="flex flex-col sm:flex-row gap-6 justify-center items-center">
