--- a/optimizers.html
+++ b/optimizers.html
@@ -117,7 +117,7 @@
                         Optimizer <span class="gradient-text">Library</span>
                     </h1>
                     <p class="text-xl text-blue-700 max-w-3xl mx-auto">
-                        Explore our comprehensive collection of <span id="total-optimizers">45</span> optimization algorithms. 
+                        Explore our comprehensive collection of <span id="total-optimizers">50</span> optimization algorithms. 
                         Find the perfect optimizer for your large-scale machine learning project.
                     </p>
                 </div>
@@ -160,6 +160,7 @@
                                 class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent appearance-none bg-white filter-select"
                             >
                                 <option value="All">All Years</option>
+                                <option value="2025">2025</option>
                                 <option value="2024">2024</option>
                                 <option value="2023">2023</option>
                                 <option value="2022">2022</option>
@@ -193,7 +194,7 @@
 
                     <!-- Results count -->
                     <div class="mt-4 text-sm text-gray-600">
-                        Showing <span id="results-count">45</span> of <span id="total-count">45</span> optimizers
+                        Showing <span id="results-count">50</span> of <span id="total-count">50</span> optimizers
                     </div>
                 </div>
 
