--- a/blogs.html
+++ b/blogs.html
@@ -335,6 +335,19 @@
                 tags: ['LoRA', 'Weight Decay', 'Regularization', 'Fine-tuning'],
                 featured: false,
                 externalUrl: 'https://irhum.github.io/blog/lorawd/'
+            },
+            {
+                id: 'optimizer-choice-training-2024',
+                title: 'How your choice of Optimisers affect your training (and why you should care)',
+                excerpt: 'A comprehensive guide exploring how different optimizers impact neural network training dynamics, convergence behavior, and final model performance. This post covers practical insights into optimizer selection and their effects on training stability, speed, and generalization.',
+                content: 'Full blog content would go here...',
+                author: 'Chinmay Karkar',
+                publishDate: '2024-12-15',
+                readTime: '12 min read',
+                category: 'Tutorial',
+                tags: ['Optimizers', 'Training Dynamics', 'Convergence', 'Neural Networks', 'Practical Guide'],
+                featured: true,
+                externalUrl: 'https://hackmd.io/@l_WDq7lkQq29Pz-KD1JPNA/SJL6n1PYgg'
             }
         ];
     </script>
