--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                         <i data-lucide="zap" class="w-10 h-10 text-white"></i>
                                     </div>
                                     <div class="text-5xl font-bold text-gray-900 mb-3 group-hover:scale-110 transition-transform duration-300" id="optimizer-count">
-                                        44
+                                        50
                                     </div>
                                     <div class="text-lg font-semibold text-gray-600 uppercase tracking-wide">
                                         Optimizers
@@ -197,7 +197,7 @@
                                         <i data-lucide="book-open" class="w-10 h-10 text-white"></i>
                                     </div>
                                     <div class="text-5xl font-bold text-gray-900 mb-3 group-hover:scale-110 transition-transform duration-300">
-                                        21
+                                        77
                                     </div>
                                     <div class="text-lg font-semibold text-gray-600 uppercase tracking-wide">
                                         Research Papers
@@ -229,7 +229,7 @@
                                         <i data-lucide="users" class="w-10 h-10 text-white"></i>
                                     </div>
                                     <div class="text-5xl font-bold text-gray-900 mb-3 group-hover:scale-110 transition-transform duration-300" id="visitor-count">
-                                        0
+                                        100
                                     </div>
                                     <div class="text-lg font-semibold text-gray-600 uppercase tracking-wide">
                                         Total Visitors
@@ -408,7 +408,7 @@
                                         Extensive Optimizer Library
                                     </h3>
                                     <p class="text-gray-600 leading-relaxed text-lg">
-                                        Explore 44+ optimization algorithms from foundational SGD to cutting-edge Adam-mini and Muon, with detailed implementations and PyTorch code.
+                                        Explore all optimization algorithms from foundational SGD to cutting-edge Adam-mini and Muon, with detailed implementations and PyTorch code.
                                     </p>
                                 </div>
                                 <div class="absolute -top-2 -right-2 w-6 h-6 bg-gradient-to-r from-blue-400 to-purple-500 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300 animate-pulse"></div>
@@ -425,7 +425,7 @@
                                         Research & Learning Hub
                                     </h3>
                                     <p class="text-gray-600 leading-relaxed text-lg">
-                                        Access 21+ research papers, tutorials, and educational content covering optimization theory, implementation guides, and latest developments.
+                                        Access research papers, tutorials, and educational content covering optimization theory, implementation guides, and latest developments.
                                     </p>
                                 </div>
                                 <div class="absolute -top-2 -right-2 w-6 h-6 bg-gradient-to-r from-purple-400 to-pink-500 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300 animate-pulse"></div>
