--- a/community.html
+++ b/community.html
@@ -203,13 +203,13 @@
                                                 GitHub Profile
                                             </a>
                                             <a
-                                                href="https://github.com/tianshijing?tab=followers"
+                                                href="https://tianshijing.github.io"
                                                 target="_blank"
                                                 rel="noopener noreferrer"
                                                 class="inline-flex items-center text-white bg-blue-600 hover:bg-blue-700 font-medium text-sm px-3 py-2 rounded-lg transition-colors duration-200"
                                             >
-                                                <i data-lucide="user-plus" class="w-4 h-4 mr-2"></i>
-                                                Follow
+                                                <i data-lucide="external-link" class="w-4 h-4 mr-2"></i>
+                                                Personal Homepage
                                             </a>
                                         </div>
                                     </div>
